# cdktr

./: .gitignore  Cargo.toml  Conducktor Architecture.drawio  LICENSE  Makefile  architecture.drawio  cli_zmq.py  diesel.toml  instructions.md  readme.md  s.py  test_tui.sh
.github/workflows/: release.yml  tag.yml
cdkr-book/: book.toml  mermaid-init.js
cdkr-book/src/: SUMMARY.md  advanced.md  architecture.md  cli.md  components.md  getting-started.md  interfaces.md  intro.md  principals_vs_agents.md  routing.md  running.md  task_router.md  troubleshooting.md  tui.md  workflows.md
cdkr-book/src/architecture/: agents.md  events-scheduler.md  logs-database.md  overview.md  principal.md  workflow-examples.md  workflows-tasks.md  zeromq.md
cdkr-book/src/cli/: init.md  logs.md  start.md  task.md
cdkr-book/src/components/: task_router.md
cdkr-book/src/getting-started/: cli-basics.md  configuration.md  first-workflow.md  installation.md  quickstart.md
cdkr-book/src/running/: agent.md  distributed.md  principal.md
cdkr-book/src/tasks/: task_definition.md  task_execution.md
cdkr-book/src/tui/: agents.md  workflows.md
cdkr-book/src/workflows/: dependencies.md  scheduling.md  task-config.md  yaml-structure.md
cdktr/: Cargo.toml
cdktr/crates/cdktr-cli/: Cargo.toml
cdktr/crates/cdktr-cli/src/: main.rs
cdktr/crates/cdktr-core/src/: hub.rs  instance.rs  lib.rs  zmq_helpers.rs
cdktr/crates/cdktr-core/src/api/: agent.rs  mod.rs  principal.rs  traits.rs
cdktr/crates/cdktr-core/src/client/: mod.rs
cdktr/crates/cdktr-core/src/models/: mod.rs  task.rs
cdktr/crates/cdktr-core/src/server/: mod.rs  models.rs  traits.rs
cdktr/crates/cdktr-core/src/server/agent/: helpers.rs  mod.rs
cdktr/crates/cdktr-core/src/task_router/: mod.rs
cdktr/crates/cdktr-core/src/taskmanager/: mod.rs
cdktr/crates/cdktr-core/src/utils/: data_structures.rs  mod.rs
cdktr/crates/cdktr-tui/: Cargo.toml
cdktr/crates/cdktr-tui/src/: dashboard.rs
cdktr/crates/cdktr-tui/src/control_panel/: action_factory.rs
crates/cdktr-api/: Cargo.toml
crates/cdktr-api/src/: lib.rs  models.rs  principal.rs  traits.rs
crates/cdktr-api/src/client/: mod.rs
crates/cdktr-cli/: Cargo.toml
crates/cdktr-cli/src/: api.rs  main.rs  models.rs
crates/cdktr-cli/src/components/: init.rs  logs.rs  mod.rs
crates/cdktr-core/: Cargo.toml
crates/cdktr-core/src/: config.rs  exceptions.rs  instance.rs  lib.rs  macros.rs  zmq_helpers.rs
crates/cdktr-core/src/api/: mod.rs  principal.rs
crates/cdktr-core/src/client/: mod.rs
crates/cdktr-core/src/db/: mod.rs  models.rs  schema.rs
crates/cdktr-core/src/db/migrations/2025-05-28-130114_create_tasks/: down.sql  up.sql
crates/cdktr-core/src/events/: mod.rs  scheduler.rs
crates/cdktr-core/src/executors/: process_executor.rs
crates/cdktr-core/src/models/: mod.rs  task.rs  traits.rs
crates/cdktr-core/src/server/: models.rs  traits.rs
crates/cdktr-core/src/server/agent/: mod.rs
crates/cdktr-core/src/server/principal/: api.rs  helpers.rs  mod.rs
crates/cdktr-core/src/taskmanager/: mod.rs
crates/cdktr-core/src/utils/: data_structures.rs  mod.rs
crates/cdktr-db/: Cargo.toml
crates/cdktr-db/src/: ddl.rs  lib.rs
crates/cdktr-events/: Cargo.toml
crates/cdktr-events/src/: lib.rs  scheduler.rs  traits.rs
crates/cdktr-ipc/: Cargo.toml
crates/cdktr-ipc/src/: instance.rs  lib.rs
crates/cdktr-ipc/src/api/: mod.rs  principal.rs  traits.rs
crates/cdktr-ipc/src/client/: mod.rs
crates/cdktr-ipc/src/events/: scheduler.rs
crates/cdktr-ipc/src/log_manager/: client.rs  db_helpers.rs  manager.rs  mod.rs  model.rs  persister.rs  publisher.rs
crates/cdktr-ipc/src/server/: mod.rs  models.rs  traits.rs
crates/cdktr-ipc/src/server/principal/: helpers.rs  mod.rs
crates/cdktr-ipc/src/taskmanager/: mod.rs  task_tracker.rs
crates/cdktr-tui/: Cargo.toml
crates/cdktr-tui/src/: actions.rs  app.rs  config.rs  dashboard.rs  dispatcher.rs  effects.rs  keyboard.rs  lib.rs  logger.rs  main.rs  tui.rs  utils.rs
crates/cdktr-tui/src/common/: calendar.rs  data_pane.rs  input.rs  mod.rs
crates/cdktr-tui/src/control_panel/: action_factory.rs  mod.rs
crates/cdktr-tui/src/stores/: app_logs_store.rs  log_viewer_store.rs  logs_store.rs  mod.rs  ui_store.rs  workflows_store.rs
crates/cdktr-tui/src/ui/: admin_panel.rs  agent_list_panel.rs  dag_viz.rs  detail_panel.rs  layout.rs  log_viewer_modal.rs  main_panel.rs  mod.rs  run_info_panel.rs  sidebar.rs
crates/cdktr-workflow/: Cargo.toml
crates/cdktr-workflow/src/: lib.rs  models.rs
crates/cdktr-workflow/src/executors/: mod.rs  subprocess.rs  uv_python.rs
crates/cdktr-workflow/test_artifacts/workflows/: multi-cmd.yml  simple-cmd.yml
crates/cdktr-workflow/tests/: fd_leak_integration_test.rs
crates/cdktr/src/: main.rs
docs/: fd_leak_fix_report.md
example_cdktr_tasks/: ex-2.yml  ex-emp.yml  ex-invalid.yml  ex-py.yml  ex-wf.yml  example-task.yml  example-wf.yml
example_cdktr_tasks/nested/: ex-3.yml
migrations/sqlite/: down.sql  up.sql
pycdktr/: Cargo.toml  README.md  cdktr.pyi  pyproject.toml
pycdktr/src/: lib.rs
python-cdktr/: cli_zmq.py  hello.py  pyproject.toml  s.py
scripts/: bump_versions.sh  release.sh
src/: db.rs  event.rs  exceptions.rs  executor.rs  hub.rs  interfaces.rs  macros.rs  main.rs  scheduler.rs  server.rs  taskmanager.rs  utils.rs  zmq_helpers.rs  zookeeper.rs
src/db/: mod.rs  models.rs  schema.rs
src/events/: mod.rs  scheduler.rs
src/executors/: mod.rs  process_executor.rs
src/models/: mod.rs  task.rs  task_types.rs  traits.rs
src/server/: agent.rs  agent_api.rs  api.rs  mod.rs  models.rs  msg.rs  principal.rs  principal_api.rs  traits.rs
src/server/agent/: api.rs  mod.rs
src/server/principal/: api.rs  mod.rs
src/task_router/: mod.rs
src/taskmanager/: api.rs  mod.rs
src/utils/: data_structures.rs
test_artifacts/: uv_py.py
tui/: Cargo.toml
tui/src/: app.rs  config.rs  control_panel.rs  crossterm.rs  dashboard.rs  flow_manager.rs  main.rs  ui.rs  utils.rs
tui/src/control_panel/: action_factory.rs  mod.rs
workflows/: simple-uvpy.yml
(+3 files in other folders)
