[workspace]
name = "cdktr"
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
cdktr-core = { path = "crates/cdktr-core" }
cdktr-tui = { path = "crates/cdktr-tui" }
cdktr-workflow = { path = "crates/cdktr-workflow" }
cdktr-ipc = { path = "crates/cdktr-ipc" }
cdktr-executors = { path = "crates/cdktr-executors" }

async-trait = "0.1.80"
chrono = "0.4.38"
cron = "0.12.1"
diesel = { version = "2.2.3", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "io-std", "process", "io-util", "sync", "time"] }
ratatui = { version = "0.27.0", features = ["all-widgets"] }
zeromq = "0.4.1"
rustyrs = "0.5.5"
serde_yml = "0.0.12"
topological-sort = "0.2.2"