[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.4"
authors = ["nicelgueta"]
repository = "https://github.com/nicelgueta/cdktr"

[workspace.dependencies]
cdktr-core = { path = "crates/cdktr-core" }
cdktr-tui = { path = "crates/cdktr-tui" }
cdktr-workflow = { path = "crates/cdktr-workflow" }
cdktr-ipc = { path = "crates/cdktr-ipc" }
cdktr-api = { path = "crates/cdktr-api" }
cdktr-db = { path = "crates/cdktr-db" }
cdktr-events = { path = "crates/cdktr-events" }
arrow = "56.1.0"
async-trait = "0.1.80"
chrono = "0.4.38"
cron = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "io-std", "process", "io-util", "sync", "time"] }
zeromq = "0.4.1"
rustyrs = "0.5.5"
serde_norway = "0.9.42"
topological-sort = "0.2.2"
regex = "1.11.1"
humantime = "2.2.0"
duckdb = {version = "1.3.2", features = ["bundled", "appender-arrow"] }
