[package]
name = "cdktr-py"
version = "0.0.9"
authors = ["nicelgueta"]
repository = "https://github.com/nicelgueta/cdktr"
edition = "2021"

[lib]
name = "cdktr"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
cdktr-core = { path = "../crates/cdktr-core" }
cdktr-api = { path = "../crates/cdktr-api" }
cdktr-ipc = { path = "../crates/cdktr-ipc" }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.117"
log = "0.4.22"

[workspace]