[package]
name = "cdktr-api"
version = "0.1.0"
edition = "2024"

[dependencies]
zeromq = { workspace = true}
cdktr-core = { workspace = true}
cdktr-db = { workspace = true}
duckdb = { workspace = true}
async-trait = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }