[package]
name = "cdktr-cli"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "cdktr"
path = "src/main.rs"

[dependencies]
cdktr-core = { workspace = true}
cdktr-api = { workspace = true}
cdktr-ipc = { workspace = true}
cdktr-tui = { workspace = true}
cdktr-db = { workspace = true}

env_logger = { workspace = true}
tokio = { workspace = true}
log = { workspace = true}
dotenv = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.27", features = ["derive"] }
rustyrs = { workspace = true }
humantime = { workspace = true}
