[package]
name = "cdktr-events"
version = "0.1.1"
edition = "2024"

[dependencies]
cdktr-core = { workspace = true }
cdktr-workflow = { workspace = true }
cdktr-api = { workspace = true }
cron = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }