[package]
name = "cdktr-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
cdktr-core = { workspace = true}
cdktr-workflow = { workspace = true}
async-trait = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zeromq = { workspace = true }
rustyrs = { workspace = true }
topological-sort = { workspace = true }