[package]
name = "cdktr-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
cdktr-core = { workspace = true}
cdktr-workflow = { workspace = true}
cdktr-db = { workspace = true}
async-trait = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zeromq = { workspace = true }
rustyrs = { workspace = true }
duckdb = { workspace = true}

[dev-dependencies]
regex = { workspace = true }
