[package]
name = "cdktr-tui"
version = "0.1.3"
edition = "2024"

[dependencies]
cdktr-core = { workspace = true }
cdktr-ipc = { workspace = true }
cdktr-api = { workspace = true }
cdktr-workflow = { workspace = true }
zeromq = { workspace = true }
tokio = { workspace = true}
env_logger = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
time = "0.3"
itertools = "0.14.0"
unicode-width = "0.2.0"
chrono = "0.4"
serde = { workspace = true }
regex = "1.11"
