[package]
name = "cdktr-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
cdktr-core = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
topological-sort = { workspace = true }

[dev-dependencies]
tempfile = "3"