[package]
name = "cdktr-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
cdktr-core = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
topological-sort = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
daggy = { version = "0.9.0", features = ["serde-1"] }

[dev-dependencies]
tempfile = "3"
